--- a/web/jefe-de-departamento/fases-trabajo-de-grado.xhtml
+++ b/web/jefe-de-departamento/fases-trabajo-de-grado.xhtml
@@ -85,7 +85,7 @@
                                 <h:outputText />
                                 
                                 <h:outputText value="Revisión de la idea:" style="font-weight: bold; " />
-                                <p:button icon="ui-icon-check" value="Diligenciar" disabled="false" />
+                                 <p:button value="Dilegenciar" icon="ui-icon-check" href="Diligenciar-formato-revision-idea.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.verificarBtnDiligenciarRevisionFormatoA()}" style="width: 110px;" />
                                 <p:button icon="ui-icon-check" value="Ver" disabled="true" />
                                 <p:button icon="ui-icon-check" value="Descargar" disabled="true" />                                
                             </h:panelGrid>
