--- a/web/director/diligenciar-formato-A.xhtml
+++ b/web/director/diligenciar-formato-A.xhtml
@@ -149,7 +149,7 @@
                             </p:tab>
 
                             <p:tab id="paso4" title="Paso 4">
-                                 <p:panel header="Confirmacion de Datos">
+                                <p:panel header="Confirmacion de Datos" style="overflow: hidden;">
                                     <h:panelGrid cellpadding="7">
 
                                         <p:fieldset legend="Nombre del Estudiante 1:" toggleable="true" styleClass="txtareaform"> 
@@ -196,7 +196,7 @@
 
                                      <p:separator />
                                      
-                                     <p:commandButton value="Guardar" update="growl" process="@this" actionListener="#{formatoA.guardar()}" />
+                                     <p:commandButton style="float: right; margin-right: 60px; margin-bottom: 15px;" value="Guardar" update="growl" process="@this" actionListener="#{formatoA.guardar()}" />
                                 </p:panel>
                             </p:tab>
 
